--- a/client/chatterbox.html
+++ b/client/chatterbox.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>chatterbox</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ==" crossorigin="anonymous"></script>
+    <!-- <script src="../node_modules/jquery/dist/jquery.js"></script> -->
     <script src="../node_modules/underscore/underscore.js"></script>
     <script>
       // DO NOT MODIFY THIS CODE
@@ -42,6 +43,7 @@
         <button id = "refresh">Refresh</button>
     </div>
     <div id="chats"></div>
+    <!-- <script src="../node_modules/jquery/dist/jquery.js"></script> -->
     <script src="env/config.js"></script>
     <script src="scripts/parse.js"></script>
     <script src="scripts/rooms.js"></script>
